# simulations_hdr

./: .gitignore  README.md  pyproject.toml  register_latex.py
.github/workflows/: docs.yml
1-context/: lwf_underregime.py  scm_grandnombres.py  scm_underregime.py
1-context/cone_spd/: main.py
1-context/examples_covariances/: action_add_to_docs.py  main.py  matrix_heatmap.tex  silent_matrix.tex  sine_cosine_matrix.tex
1-context/examples_covariances/exports/: identity.tex  toeplitz.tex
1-context/experiments/: context_example_covariances.yaml  context_lwf_underregime.yaml  context_scm_grandnombres.yaml  context_scm_underregime.yaml
1-context/lwf_underregime/: action_add_to_docs.py
1-context/outputs/error_estimation_scm/: cov.tex  mean.tex
1-context/scm_grandnombres/: action_add_to_docs.py  main.py
1-context/scm_underregime/: action_add_to_docs.py  main.py
2-detection/: README.md
2-detection/data/: Selection  download_sar.sh
2-detection/experiments/: detection_offline_gaussian.yaml  detection_online_dcg.yaml  mc_dcg_h0.yaml  mc_dcg_h1.yaml  mc_gaussian_h0.yaml  mc_gaussian_h1.yaml  mc_kronecker_h1.yaml  sar_det_off_dcg.yaml  sar_det_off_gauss.yaml  sar_det_off_kron.yaml  sar_det_on_dcg.yaml  sar_det_on_gauss.yaml  sar_det_on_kron.yaml  sar_mc_dcg_h0.yaml  sar_mc_dcg_h1.yaml  sar_mc_gauss_h0.yaml  sar_mc_gauss_h1.yaml  sar_mc_kron_h0.yaml  sar_mc_kron_h1.yaml
2-detection/experiments/sar/: sar_bench_memory.yaml  sar_bench_online_memory.yaml  sar_bench_online_time.yaml  sar_bench_time.yaml  sar_det_off_dcg.yaml  sar_det_off_gauss.yaml  sar_det_off_kron.yaml  sar_det_on_dcg.yaml  sar_det_on_gauss.yaml  sar_det_on_kron.yaml  sar_mc_dcg_h0.yaml  sar_mc_dcg_h1.yaml  sar_mc_gauss_h0.yaml  sar_mc_gauss_h1.yaml  sar_mc_kron_h0.yaml  sar_mc_kron_h1.yaml
2-detection/experiments/sonar/: sonar_pd_angle.yaml  sonar_pd_snr.yaml  sonar_pfa_threshold.yaml  sonar_tyler_conv.yaml
2-detection/sar-experiments/: tests.py
2-detection/sar_experiments/: __init__.py  action_plot.py  compute_cd_dcg_online.py  compute_cd_kronecker_offline.py  compute_cd_offline.py  compute_cd_online.py  detection.py  detection_offline.py  detection_online.py  test_estimation.py  tests.py  utils.py  wavelets.py
2-detection/sar_experiments/benchmarks/: memory_benchmark.sh  memory_benchmark_online.sh  time_benchmark.sh  time_benchmark_online.sh
2-detection/sar_experiments/compute_detection/: dcg_online.py  gauss_online.py  offline.py  (+6 more)
2-detection/src/: __init__.py  backend.py  detection.py  detection_online.py  estimation.py  estimation_kronecker.py  estimation_online.py  exporter.py  gpu_ressources.py  hardware_ressources.py  logging_config.py  manifolds.py  sar.py  simulation.py
2-detection/tests/: README.md  __init__.py  conftest.py  test_backend.py  test_backend_refactor.py  test_detection.py  test_estimators.py  test_hardware_ressources_backend.py  test_manifolds.py
docs/: mkdocs.yml
docs/docs/: api.md  chapters.md  experiments-overview.md  index.md  kitchen-sink.md
docs/hooks/: git_dates.py
docs/overrides/: main.html
docs/scripts/: example_viz.py  gen_experiment_index.py
docs/site/: 404.html  index.html  objects.inv
hdrlib/: __init__.py
hdrlib/core/: __init__.py  backend.py  estimation.py  manifolds.py  mc.py  plot_style.py  plotly_style.py  simulation.py
hdrlib/sar/: __init__.py  detection_online.py  detectors.py  estimation_kronecker.py  estimation_online.py  mc.py  plotting.py  simulation.py
hdrlib/sonar/: __init__.py  detectors.py  estimation.py  mc.py  simulation.py
outputs/example_covariances/: all_covariances.tex
shared/: plot_style.py  plotly_style.py
tests/: README.md  conftest.py  test_backend.py  test_backend_refactor.py  test_detection.py  test_estimators.py  test_hardware_ressources_backend.py  test_manifolds.py  test_sonar.py
(+161 files in other folders)
