[project]
name = "simulations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "matplot2tikz>=0.4.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "pyqt6>=6.9.1",
    "pytest>=8.3.4",
    "rich>=14.1.0",
    "scipy>=1.16.1",
    "torch>=2.9.0",
]
