[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hdrlib"]

[project]
name = "simulations"
version = "0.1.0"
description = "Simulations and figures for an HDR dissertation on covariance matrices: from multivariate statistics to deep learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "matplot2tikz>=0.5.3",
    "matplotlib>=3.10.3",
    "memray>=1.19.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "pyqt6>=6.9.1",
    "pytest>=8.3.4",
    "qanat",
    "rich>=14.1.0",
    "ruff>=0.15.12",
    "scipy>=1.16.1",
    "torch>=2.9.0",
]

# Optional extras — not installed by default (platform / hardware specific).
# Install with:
#   uv sync --extra jax          # JAX CPU-only
#   uv sync --extra jax-cuda     # JAX with CUDA 12 GPU support
#   uv sync --extra jax-metal    # Apple Silicon GPU
#   uv sync --extra cupy         # NVIDIA CUDA (adjust suffix for your driver)
[project.optional-dependencies]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
]
jax-cuda = [
    "jax[cuda12]>=0.4",
]
jax-metal = [
    "jax-metal>=0.1",
]
cupy = [
    # cupy-cuda12x covers CUDA 12.x; change to cupy-cuda11x for CUDA 11.x
    "cupy-cuda12x>=13",
]

# jax[cuda12] pulls jaxlib-cuda12-plugin etc. from the JAX CUDA index.
[[tool.uv.index]]
name = "jax-cuda-releases"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
# Line length is defined above for the formatter but not enforced as a lint
# error — research scripts intentionally carry long literal/expression lines.
ignore = ["E501"]

[tool.uv.sources]
qanat = { git = "https://github.com/ammarmian/qanat" }

[dependency-groups]
dev = [
    "hatchling>=1.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.4",
    "plotly>=6.8.0",
    "pyyaml>=6.0.3",
]
